--- a/audio.html
+++ b/audio.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Tag</title>
+    <title>Audio Tag</title>
 </head>
 <body>
-    <img src="/state/nature.jpg" alt="nature" height="200px" width="100%">
-    <a href="bold_tag.html">bold page</a>
+    <audio src="summer-memories-270159.mp3" controls >summer-memories-270159</audio>
 </body>
 </html>
