--- a/state/pune/pune.html
+++ b/state/pune/pune.html
@@ -9,8 +9,9 @@
     <h1>I'm In Pune</h1>
     <a href="../nashik/nashik.html">Nashik</a>
     <a href="../ahmednagar/naagar.html">nagar</a>
-    <a href="../beed/ashti/home.html">ashti</a>
     <a href="../beed/beed.html">Beed</a>
-    
+    <img src="../nature.jpg" alt="" height="200px" width="200px">
+
+    <h1><a href="../beed/ashti/home.html">Ashti</a></h1>
 </body>
 </html>
