--- a/list_tag.html
+++ b/list_tag.html
@@ -35,6 +35,49 @@
         <li>pink</li>
     </ol>
     <h1>UnOrder List</h1>
+    <!-- type :- disc / circle / square / none -->
+    <p>Subject List</p>
+    <ul type="disc">
+        <li>math</li>
+        <li>science</li>
+        <li>history</li>
+        <li>chemistry</li>
+    </ul>
+    <p>animal</p>
+    <ul type="circle">
+        <li>lion</li>
+        <li>tiger</li>
+        <li>elephant</li>
+        <li>monkey</li>
+    </ul>
+    <p>technology</p>
+    <ul type="none">
+        <li>Front end 
+            <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>BOOTSTRAP</li>
+            <li>JAVASCRIPTS</li>
+            </ul>
+        </li>
+        <li>backend 
+            <ul>
+                <li>python</li>
+                <li>node js</li>
+                <li>java</li>
+            </ul>
+        </li>
+        
+    </ul>
     <h1>description List</h1>
+
+    <dl>
+
+        <dt title="A Programing language">HTML</dt>
+        <dd >hyper text markup language</dd>
+
+        <dt title="another language"> CSS</dt>
+        <dd>A stylesheet language</dd>
+    </dl>
 </body>
 </html>
